fix: general enhancements
