# backend/src/controllers/category.controller.ts
@@ -10,16 +10,20 @@ class CategoryController {
   async getAll(request: Request, response: Response): Promise<Response | any> {
     const language = request.headers.language;
     const userId = (jwt.verify((request.headers.authorization as string).split(' ')[1], String(process.env.JWT_KEY)) as any).userId;
+    let onlyMine = request.query.onlyMine == 'true' ? true : false;
+
+    let findQuery = {} as any;
+    if (onlyMine) findQuery = { userId } as any;
 
     const countQuery = (callback): any => {
-      Model.find({ userId }).countDocuments({}, (error, count) => {
+      Model.find(findQuery).countDocuments({}, (error, count) => {
         if (error) callback(error, null);
         else callback(null, count);
       });
     };
 
     const retrieveQuery = (callback): any => {
-      Model.find({ userId }).exec((error, documents) => {
+      Model.find(findQuery).exec((error, documents) => {
         if (error) callback(error, null);
         else callback(null, documents);
       });
